--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "twitterBot",
-    "version": "0.0.0",
-    "description": "Twitter Bot to automate my personal twitter account.",
+    "version": "0.0.1",
+    "description": "Twitter Bot to automate my personal twitter account by @Gikdew",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
